<resources>
    <string name="app_name">SocialNetworkProject</string>
    <string name="login_hint">Chưa có tài khoản, <u>đăng ký ngay !</u></string>
    <string name="signup_hint">Đã tạo tài khoản, <u>đăng nhập ngay !</u></string>
    <!--      title action bottom nav-->
    <string name="action_home_title">Trang chủ</string>
    <string name="action_chat_title">Tin nhắn</string>
    <string name="action_group_chat_title">Nhóm</string>
    <string name="action_friend_title">Bạn bè</string>
    <string name="action_more_title">Thêm</string>

    <string name="no_network">Lỗi kết nối, vui lòng thử lại sau</string>
    <string name="no_data">Dữ liệu trống</string>

    <string name="media_picker_select_from"> Chọn video từ: </string>
    <string name="media_picker_camera"> Máy ảnh </string>
    <string name="media_picker_gallery"> Thư viện </string>
    <string name="media_picker_ok"> OK </string>
    <string name="media_picker_cancel"> Hủy </string>
    <string name="media_picker_some_permission_is_denied"> Một số quyền bị từ chối </string>
    <string name="media_picker_you_need_to_grant_access_to"> Bạn cần cấp quyền truy cập cho </string>
    <string name="media_picker_read_Write_external_storage">  Bộ nhớ ngoài: Đọc và Ghi</string>

    <string name="name_user_default">john smith</string>
    <string name="content_default">lorem isPum lorem isPum lorem isPum lorem isPum lorem isPum lorem isPum</string>
    <string name="time_default">13:43 21/03/20</string>
    <string name="number_default">13</string>

    <string-array name="arr_city">
        <item>An Giang</item>
        <item>Bà Rịa - Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Định</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cao Bằng</item>
        <item>Đắk Lắk</item>
        <item>Đắk Nông</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hậu Giang</item>
        <item>Hòa Bình</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thừa Thiên Huế</item>
        <item>Tiền Giang</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>
        <item>Phú Yên</item>
        <item>Cần Thơ</item>
        <item>Đà Nẵng</item>
        <item>Hải Phòng</item>
        <item>Hà Nội</item>
        <item>TP HCM</item>

    </string-array>
    <string-array name="arr_school">
        <item>Đại học Bách khoa Hà Nội</item>
        <item>Đại học Công đoàn</item>
        <item>Đại học Công nghệ - ĐHQG Hà Nội</item>
        <item>Đại học Công nghệ Giao thông vận tải</item>
        <item>Đại học Công nghệ và Quản lý Hữu Nghị</item>
        <item>Đại học Công nghiệp Dệt may Hà Nội</item>
        <item>Đại học Công nghiệp Hà Nội</item>
        <item>Đại học Công nghiệp Việt Hung</item>
        <item>Đại học Điện lực</item>
        <item>Đại học Dược Hà Nội</item>
        <item>Đại Học Giáo dục - ĐHQG Hà Nội</item>
        <item>Đại học Giao thông vận tải</item>
        <item>Đại học Hà Nội</item>
        <item>Đại Học Khoa học Tự nhiên - ĐHQG Hà Nội</item>
        <item>Đại học Khoa học và Công nghệ Hà Nội</item>
        <item>Đại Học Khoa học Xã hội và Nhân văn - ĐHQG Hà Nội</item>
        <item>Đại học Kiểm sát Hà Nội</item>
        <item>Đại học Kiến trúc Hà Nội</item>
        <item>Đại học Kinh tế - ĐHQG Hà Nội</item>
        <item>Đại học Kinh tế Kỹ thuật Công nghiệp Hà Nội</item>
        <item>Đại học Kinh tế Quốc dân</item>
        <item>Đại học Lâm nghiệp</item>
        <item>Đại học Lao động Xã hội</item>
        <item>Đại học Luật Hà Nội</item>
        <item>Đại học Mỏ Địa chất Hà Nội</item>
        <item>Đại học Mở Hà Nội</item>
        <item>Đại Học Mở Hà Nội</item>
        <item>Đại học Mỹ thuật Công nghiệp</item>
        <item>Đại học Mỹ thuật Việt Nam</item>
        <item>Đại học Ngoại ngữ - ĐHQG Hà Nội</item>
        <item>Đại học Ngoại thương</item>
        <item>Đại học Nội vụ Hà Nội</item>
        <item>Đại học Quốc gia Hà Nội</item>
        <item>Đại học Sân khấu Điện ảnh</item>
        <item>Đại học Sư phạm Hà Nội</item>
        <item>Đại học Sư phạm Nghệ thuật Trung ương Hà Nội</item>
        <item>Đại học Sư phạm Thể dục thể thao Hà nội</item>
        <item>Đại học Tài chính - Ngân hàng Hà Nội</item>
        <item>Đại học Tài nguyên và Môi trường Hà Nội</item>
        <item>Đại học Thành Đô</item>
        <item>Đại học Thủ đô Hà Nội</item>
        <item>Đại học Thương mại</item>
        <item>Đại học Thủy lợi</item>
        <item>Đại học Văn hóa Hà Nội</item>
        <item>Đại học VinUni</item>
        <item>Đại học Xây dựng</item>
        <item>Đại học Y Hà Nội</item>
        <item>Đại học Y tế Công cộng</item>
        <item>Học viện Âm nhạc Quốc gia Việt Nam</item>
        <item>Học viện Báo chí Tuyên truyền</item>
        <item>Học viện Chính sách và Phát triển</item>
        <item>Học viện Công nghệ Bưu chính Viễn thông</item>
        <item>Học viện Hành chính Quốc gia</item>
        <item>Học Viện Hậu Cần</item>
        <item>Học viện Khoa học Quân sự</item>
        <item>Học viện Kỹ thuật Mật mã</item>
        <item>Học viện Ngân hàng</item>
        <item>Học viện Ngoại giao</item>
        <item>Học viện Nông nghiệp Việt Nam</item>
        <item>Học viện Phụ nữ Việt Nam</item>
        <item>Học viện Quản lý Giáo dục</item>
        <item>Học viện Tài chính</item>
        <item>Học viện Thanh Thiếu niên Việt Nam</item>
        <item>Học viện Tòa án</item>
        <item>Học viện Y Dược học cổ truyền Việt Nam</item>
        <item>Khoa Luật - ĐHQG Hà Nội</item>
        <item>Khoa Quốc tế - ĐHQG Hà Nội</item>
        <item>Khoa Y Dược - ĐHQG Hà Nội</item>

    </string-array>
</resources>